--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "card-design-prototype",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vue-event-card",
+  "version": "0.1.1",
+  "private": false,
+  "license": "MIT",
+  "main": "./dist/vue-event-card.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name vue-event-card ./src/components/index.js",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -26,5 +29,12 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
+  ],
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
   ]
 }
