--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-event-card",
-  "version": "0.1.3",
-  "description": "An interactive and minimalistic event card to display information.",
+  "version": "0.1.4",
+  "description": "A Vue.js interactive card design component to show essentials and description for an event.",
   "private": false,
   "license": "MIT",
   "author": "Dhruv Misra",
